--- a/starter-project/package.json
+++ b/starter-project/package.json
@@ -73,6 +73,9 @@
     "redux": "^4.0.5",
     "scss-loader": "^0.0.1",
     "styled-components": "^5.1.1",
-    "typings-for-scss-modules-loader": "^1.5.1"
+    "typings-for-scss-modules-loader": "^1.5.1",
+    "@types/classnames": "^2.2.10",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2"
   }
 }
