--- a/functional-class-components/tsconfig.json
+++ b/functional-class-components/tsconfig.json
@@ -7,6 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
@@ -24,7 +25,12 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src",
+    "e2e"
+  ],
+  "exclude": [
+    "**/templates/*",
+    "**/node_modules/*"
   ]
 }
 
